src/test/ui/parser/removed-syntax-enum-newtype.stderr
error: expected `where`, or `{` after enum name, found `=`
  --> $DIR/removed-syntax-enum-newtype.rs:1:8
   |
LL | enum e = isize;
   |        ^ expected `where`, or `{` after enum name

error: aborting due to previous error

