src/test/ui/parser/removed-syntax-enum-newtype.rs
enum e = isize; //~ ERROR expected `where`, or `{` after enum name, found `=`
